design almost completed

--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -1,57 +1,57 @@
 <!-- <ion-content> -->
   <div style="background-color: #008000; height: 100%; width:100%;">
-    <h4 style="color:white; text-align: center;">12:30 PM &nbsp; &nbsp; 11:03 &nbsp;&nbsp;12-01-2020  &nbsp;&nbsp; 1.9:18:57 
+    <h4 style="color:white; text-align: center;" class="bottomRow2">12:30 PM &nbsp; &nbsp; 11:03 &nbsp;&nbsp;12-01-2020  &nbsp;&nbsp; 1.9:18:57 
     <span>ID : Parth</span>&nbsp;&nbsp;&nbsp;<span>BALANCE : 0</span></h4>  
     <ion-grid style="height: 60%; width:100%;">
       <ion-row>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/1.jpeg"  width="95%" height="45%" />
-          <ion-input  style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; color: white;" type="number"></ion-input>
+          <img src="assets/icon/1.jpeg"  width="95%" height="55%" />
+          <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/2.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/2.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/3.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/3.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/4.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/4.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/5.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/5.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
       </ion-row>
       <ion-row class="bottomRow">
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/6.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/6.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/7.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/7.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/8.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/8.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/9.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/9.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/10.jpeg"  width="95%" height="45%" />
-          <ion-input style="background-color: black; margin-left: 25%; width:50%; border-radius: 40px; text-align: center; color: white;" type="number"></ion-input>
+          <img src="assets/icon/10.jpeg"  width="95%" height="55%" />
+<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:30px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
       </ion-row>
     </ion-grid>
 <ion-button class="special-bottom-button" shape="round"  color="tertiary" style="color:purple;height:30px;" (click)="onLogout()">
   <ion-icon name="exit"></ion-icon>Exit
 </ion-button>
-<ion-button class="special-bottom-button" shape="round" color="danger" style="color:rgb(1.745, 38, 0);height:30px;" (click)="onpro()">
+<ion-button class="special-bottom-button" shape="round" color="danger" style="color:rgb(1.755, 38, 0);height:30px;" (click)="onpro()">
 <ion-icon name="nuclear"></ion-icon>&nbsp;Clear
 </ion-button>
 <ion-button class="special-bottom-button" shape="round" color="dark"  style="color:lightskyblue;height:30px;" (click)="onChange()">
