--- a/src/app/purchased/purchased.page.html
+++ b/src/app/purchased/purchased.page.html
@@ -1,25 +1,25 @@
 <ion-content>
-  <div style="background-color: #008000;">
-    <h4 style="color: yellow; text-align: center;"><span>ID : Parth</span>&nbsp;&nbsp;&nbsp;<span>BALANCE : 0 Rs.</span>
+  <div style="background-color: #008000; text-align: center;">
+    <span style="margin-left: 30%;">&nbsp;&nbsp;ID : Parth&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;<span>&nbsp;&nbsp;BALANCE : 0 Rs.&nbsp;&nbsp;</span>
       <ion-button shape="round"  color="tertiary" style="color:purple;height:30px; margin-left: 200px;" (click)="onExit()">
         <ion-icon name="exit"></ion-icon>Exit
       </ion-button>
-    </h4>
-    <ion-grid no-padding>
+      <!-- <div style="margin-right: -10px;"> -->
+    <ion-grid class="grid">
     <ion-row>
       <ion-col>
-        <ion-card style="background-color: white;">
+        <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
           <ion-card-header>
             <ion-card-subtitle>02-Jan</ion-card-subtitle>
             <ion-card-subtitle>07:30 PM </ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
-        <img src="assets/icon/1.jpeg" />
+            <img src="assets/icon/1.jpeg"  width="95%" height="55%" />
       </ion-card-content>
         </ion-card>
     </ion-col> 
     <ion-col>
-      <ion-card style="background-color: white;">
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
         <ion-card-header>
           <ion-card-subtitle>02-Jan</ion-card-subtitle>
           <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -30,7 +30,7 @@
       </ion-card>
     </ion-col>
     <ion-col>
-      <ion-card style="background-color: white;">
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
       <ion-card-header>
         <ion-card-subtitle>02-Jan</ion-card-subtitle>
         <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -42,7 +42,7 @@
           
     </ion-col>
     <ion-col>
-      <ion-card style="background-color: white;">
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
       <ion-card-header>
         <ion-card-subtitle>02-Jan</ion-card-subtitle>
         <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -54,7 +54,7 @@
           
     </ion-col>
     <ion-col>
-      <ion-card style="background-color: white;">
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
       <ion-card-header>
         <ion-card-subtitle>02-Jan</ion-card-subtitle>
         <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -64,10 +64,9 @@
       </ion-card-content>
     </ion-card>
     </ion-col>
-  </ion-row> 
-    <ion-row>
+
       <ion-col>
-        <ion-card style="background-color: white;">
+        <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
         <ion-card-header>
           <ion-card-subtitle>02-Jan</ion-card-subtitle>
           <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -78,8 +77,10 @@
       </ion-card>
           
     </ion-col>
+  </ion-row> 
+  <ion-row style="width: 67%;">
     <ion-col>
-      <ion-card style="background-color: white;">
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
       <ion-card-header>
         <ion-card-subtitle>02-Jan</ion-card-subtitle>
         <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -91,7 +92,7 @@
           
     </ion-col>
     <ion-col>
-      <ion-card style="background-color: white;">
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
       <ion-card-header>
         <ion-card-subtitle>02-Jan</ion-card-subtitle>
         <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -102,8 +103,8 @@
     </ion-card>
           
     </ion-col>
-    <ion-col >
-      <ion-card style="background-color: white;">
+    <ion-col>
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
       <ion-card-header>
         <ion-card-subtitle>02-Jan</ion-card-subtitle>
         <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -115,7 +116,7 @@
           
     </ion-col>
     <ion-col>
-      <ion-card style="background-color: white;">
+      <ion-card style="background-color: white; border-radius: 10px; width:140px; height:187px;">
       <ion-card-header>
         <ion-card-subtitle>02-Jan</ion-card-subtitle>
         <ion-card-subtitle>07:30 PM </ion-card-subtitle>
@@ -128,6 +129,7 @@
     </ion-col>
     </ion-row>
   </ion-grid>
+<!-- </div> -->
   </div>
 </ion-content>
 
