--- a/src/app/program/program.page.scss
+++ b/src/app/program/program.page.scss
@@ -1,6 +1,10 @@
 .bottomRow
 {
-  margin-top: -60px;
+  margin-top: -50px;
+}
+.bottomRow2
+{
+  margin-bottom: -5px;
 }
 img{
   border-radius: 10px;
