design fixed in program and last draw

--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -2,7 +2,7 @@
   <div style="background-color: #008000; height: 100%; width:100%;">
     <h4 style="color:white; text-align: center;" class="bottomRow2">12:30 PM &nbsp; &nbsp; 11:03 &nbsp;&nbsp;12-01-2020  &nbsp;&nbsp; 1.9:18:57 
     <span>ID : Parth</span>&nbsp;&nbsp;&nbsp;<span>BALANCE : 0</span></h4>  
-    <ion-grid style="height: 60%; width:100%;">
+    <ion-grid style="height: 60%; width:100%; margin-top: -8px;">
       <ion-row>
         <ion-col style="text-align: center;" full no-margin no-padding>
           <img src="assets/icon/1.jpeg"  width="95%" height="55%" />
