some design changed

--- a/src/app/changepass/changepass.page.html
+++ b/src/app/changepass/changepass.page.html
@@ -1,12 +1,17 @@
 <!-- <ion-content> -->
   <div style="background-color: #008000!important;height:100%;width:100%;text-align: center;vertical-align:middle;">
     <ion-grid>
+      
       <ion-row justify-content-center align-items-center style='height: 100%; margin-top: 20%;'>
+        
       <!-- <ion-col col-2></ion-col>  -->
       <ion-col> 
     <h3>&nbsp;Reset Password</h3>
       </ion-col></ion-row>
-    <ion-row justify-content-center align-items-center style='height: 100%; margin-top: 50%;'>
+      <ion-row justify-content-center align-items-center style='height: 100%; margin-top: 20%;'>
+        <h4><span>&nbsp;ID : Parth&nbsp;&nbsp;</span></h4>
+      </ion-row>
+    <ion-row justify-content-center align-items-center style='height: 100%; margin-top: 20%;'>
       <ion-col>
         <ion-item color="#008000">
           <ion-input [clearInput]="true" style="font-size:17px; color:white;" placeholder=" Old Password" type="password" [(ngModel)]="password"
@@ -33,6 +38,7 @@
         </ion-button>
         
   </ion-col></ion-row></ion-grid>
+
     
 </div>
 <!-- </ion-content> -->
