--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-  <div class="center-class" style=" background-color:#008000 !important;height:100%;width:100%;">
+  <div class="center-class" style=" background-color:#008000 !important;">
     
     <!-- <h2 style="color: yellow;">HONEST</h2>  
     <h3>&nbsp;Log In to Your Account</h3>
@@ -16,8 +16,9 @@
           <ion-icon name="Send"></ion-icon>
         </ion-button> -->
         <ion-grid>
-          <ion-row justify-content-center align-items-center style='height: 100%; text-align: center; margin-bottom: 40%;'><ion-col><h1 style="color: yellow;">HONEST</h1> </ion-col></ion-row>
-          <ion-row justify-content-center align-items-center style='height: 100%; margin-bottom: 90%; text-align: center;'>
+          <ion-row justify-content-center align-items-center><img src="../../assets/icon/icon.png" height="30%" width="30%" /></ion-row>
+          <ion-row justify-content-center align-items-center style='text-align: center;'><ion-col><h1 style="color: yellow;">HONEST</h1> <br></ion-col></ion-row>
+          <ion-row justify-content-center align-items-center style='text-align: center;'>
           
           <!-- <ion-col col-2></ion-col>  -->
           <ion-col>   
