--- a/src/app/purchased/purchased.page.html
+++ b/src/app/purchased/purchased.page.html
@@ -1,130 +1,131 @@
 <ion-content >
   <div style="background-color: #008000; text-align: center;">
-    <span style="margin-left: 30%;">&nbsp;&nbsp;ID : Parth&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;<span>&nbsp;&nbsp;BALANCE
-      : 0 Rs.&nbsp;&nbsp;</span>
-    <ion-button shape="round" color="tertiary" style="color:purple;height:30px; margin-left: 200px;" (click)="onExit()">
+    <!-- <span style="margin-left: 30%;">
+      &nbsp;&nbsp;ID : Parth&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;<span>&nbsp;&nbsp;BALANCE
+      : 0 Rs.&nbsp;&nbsp;</span> -->
+    <ion-button shape="round" color="tertiary" style="color:purple;height:30px; margin-left: 80%;" (click)="onExit()">
       <ion-icon name="exit"></ion-icon>Exit
     </ion-button>
     <!-- <div style="margin-right: -10px;"> -->
     <ion-grid class="grid" style="margin-left: 10px; margin-right: 10px;">
       <ion-row >
-        <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+        <ion-col>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/1.jpeg" width="95%" height="55%" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/1.jpeg" style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
         </ion-col>
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/2.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/2.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
         </ion-col>
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/3.jpeg" />
-            </ion-card-content>
-          </ion-card>
-
-        </ion-col>
-        <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
-              <ion-card-subtitle>02-Jan</ion-card-subtitle>
-              <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/4.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/3.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
 
         </ion-col>
-
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/5.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/4.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
+          </ion-card>
+
+        </ion-col>
+
+        <ion-col >
+          <ion-card style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
+              <ion-card-subtitle>02-Jan</ion-card-subtitle>
+              <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/5.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
         </ion-col>
       </ion-row>
-      <ion-row style="margin-top: -20px;">
+      <ion-row style="margin-top: -15px;">
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/6.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/6.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
 
         </ion-col>
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/7.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/7.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
 
         </ion-col>
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/8.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/8.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
 
         </ion-col>
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/9.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/9.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
 
         </ion-col>
         <ion-col >
-          <ion-card  style="background-color: white; border-radius: 10px; width:140px; height:187px;">
-            <ion-card-header>
+          <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
+            <!-- <ion-card-header> -->
               <ion-card-subtitle>02-Jan</ion-card-subtitle>
               <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-              <img src="assets/icon/10.jpeg" />
-            </ion-card-content>
+            <!-- </ion-card-header> -->
+            <!-- <ion-card-content> -->
+              <img src="assets/icon/10.jpeg"  style="height: 155px;" />
+            <!-- </ion-card-content> -->
           </ion-card>
 
         </ion-col>
@@ -169,7 +170,7 @@
       <ion-card-subtitle style="text-align: center;">2:00 PM</ion-card-subtitle>
     </ion-card-header>
    
-    <img src="assets/icon/1.jpeg" />
+    <img src="assets/icon/1.jpeg"  style="height: 155px;" />
     
   
   </ion-card>
@@ -181,7 +182,7 @@
       <ion-card-subtitle style="text-align: center;">2:00 PM</ion-card-subtitle>
     </ion-card-header>
     
-    <img src="assets/icon/2.jpeg" />
+    <img src="assets/icon/2.jpeg"  style="height: 155px;" />
   
   </ion-card>
   
