--- a/src/app/purchased/purchased.page.scss
+++ b/src/app/purchased/purchased.page.scss
@@ -28,4 +28,18 @@ ion-row {
     
   }
 }
+ion-col{
+    margin-right: 3px;
+}
+.parent{
+    // width:500px;
+    // height:300px;
+    // padding: 0px;
+  }
+  
+  #parent > img{
+    // margin-top: -30%;
+    width:100%;
+    height:100%;
+  }
 
