--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-  <div class="center-class" style=" background-color:#008000 !important;">
+  <div class="center-class" style=" background-color:#008000 !important; height: 100%; width: 100%;">
     
     <!-- <h2 style="color: yellow;">HONEST</h2>  
     <h3>&nbsp;Log In to Your Account</h3>
@@ -16,15 +16,15 @@
           <ion-icon name="Send"></ion-icon>
         </ion-button> -->
         <ion-grid>
-          <ion-row justify-content-center align-items-center><img src="../../assets/icon/icon.png" height="30%" width="30%" /></ion-row>
-          <ion-row justify-content-center align-items-center style='text-align: center;'><ion-col><h1 style="color: yellow;">HONEST</h1> <br></ion-col></ion-row>
+          <ion-row justify-content-center align-items-center><img src="../../assets/icon/icon.png" height="30%" width="30%" style="margin-top: 25%;" /></ion-row>
+          <ion-row justify-content-center align-items-center style='text-align: center;'><ion-col><span style="color: yellow; font-size: 30px; text-align: center; float: none; background-color: #008000;">HONEST</span> <br></ion-col></ion-row>
           <ion-row justify-content-center align-items-center style='text-align: center;'>
           
           <!-- <ion-col col-2></ion-col>  -->
           <ion-col>   
             <h3>&nbsp;Log In</h3>
                  <ion-item color="#008000">
-                  <ion-input  style="font-size:17px; color:white;" placeholder="Email Id" type="text" [(ngModel)]="name" [required]="true"></ion-input>
+                  <ion-input  style="font-size:17px; color:white;" placeholder="Username" type="text" [(ngModel)]="name" [required]="true"></ion-input>
                 </ion-item>
                 <br>
                 <ion-item color="#008000" >
