--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -1,49 +1,48 @@
-<!-- <ion-content> -->
-  <div style="background-color: #008000;">
+  <div style="background-color: #008000; width: 100%; height: 100%;">
     <h4 style="color:white;" class="bottomRow2">12:30 PM &nbsp;&nbsp;11:03&nbsp;12-01-2020  &nbsp;1:18:57
       <span  style="margin-right: 10px;">&nbsp;ID : Parth&nbsp;&nbsp;</span>&nbsp;<span>&nbsp;&nbsp;BALANCE : 0 &nbsp;&nbsp;</span></h4>
-      <ion-grid style="height: 55%; width:100%;clear: both;">
+      <ion-grid style="height: 55%; width:100%;clear: both; margin-top: -10%">
       <ion-row>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/1.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/1.jpeg"  width="95%" height="75%" />
           <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/2.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/2.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/3.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/3.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/4.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/4.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/5.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/5.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
       </ion-row>
       <ion-row class="bottomRow">
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/6.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/6.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/7.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/7.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/8.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/8.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/9.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/9.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
         <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/10.jpeg"  width="95%" height="65%" />
+          <img src="assets/icon/10.jpeg"  width="95%" height="75%" />
 <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
         </ion-col>
       </ion-row>
@@ -65,22 +64,4 @@
         <ion-icon name="checkbox-outline"></ion-icon>Submit 
         </ion-button></div>  
     </div>
-    <!-- <div style="max-width:100%;">
-<ion-button class="special-bottom-button" shape="round"  color="tertiary" style="color:purple;" (click)="onLogout()">
-  <ion-icon name="exit"></ion-icon>Exit
-</ion-button>
-<ion-button class="special-bottom-button" shape="round" color="danger" style="color:rgb(1.755, 38, 0);" (click)="onpro()">
-<ion-icon name="nuclear"></ion-icon>Clear
-</ion-button>
-<ion-button class="special-bottom-button" shape="round" color="dark"  style="color:lightskyblue;" (click)="onChange()">
-<ion-icon name="filing"></ion-icon>Jackpot
-</ion-button>
-<ion-button class="special-bottom-button" shape="round"  color="primary" style="color:yellow;" (click)="onPurchased()">
-<ion-icon name="filing"></ion-icon>Double Jackpot
-</ion-button>
-<ion-button class="special-bottom-button" shape="round"  color="warning" style="color:black;" (click)="onLogout()">
-<ion-icon name="checkbox-outline"></ion-icon>Submit 
-</ion-button>
-</div> -->
-</div>
-<!-- </ion-content> -->
+  </div>
