--- a/src/app/program/program.page.scss
+++ b/src/app/program/program.page.scss
@@ -1,6 +1,9 @@
 .bottomRow
 {
-  margin-top: -35px;
+  // margin-top: -20px;
+  // position: relative;
+  // top: 0px;
+  margin-top: -2%;
 }
 .bottomRow2
 {
@@ -8,24 +11,31 @@
   // float:left;
   margin-left: 10px;
 }
+h4{
+  margin-top: 0px;
+}
 img{
   border-radius: 10px;
   background-color: #008000;
 }
 .special-bottom-button{
-  position: relative;
-  bottom:   -70px;
+  // position: relative;
+  // bottom:   -70px;
   // left: 5%;
   height:30px;
   // margin-left: -10px;
   // float:bottom;
 }
 .container {  
-  margin-left:10px;
+  // margin-left:10px;
   font-size: 12px;
   display: grid;  
   grid-template-columns: 110px 125px 145px 215px 120px;  
-  margin-bottom: -20px;
+  // margin-top: -5px;
+  position: fixed;
+    left: 5px;
+    bottom: 0px;
+    right: 0;
   // grid-template-rows: 50px 50px;  
 }
 .special-span{
@@ -34,4 +44,16 @@ img{
 .special-span2{
   margin-left: 65%;
   // margin-top: -20px;
+}
+ion-input{
+  position: relative;
+  top:0px;
+}
+ion-grid{
+  // margin-top:-5px;
+  // position: relative;
+  // bottom: 10px;
+}
+h4{
+  // margin-top:-1px;
 }
