--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -1,5 +1,5 @@
   <div style="background-color: #008000; width: 100%; height: 100%;">
-    <h4 style="color:white;" class="bottomRow2">12:30 PM &nbsp;&nbsp;11:03&nbsp;12-01-2020  &nbsp;1:18:57
+    <h4 style="color:white;" class="bottomRow2">{{draw_hour}}:{{draw_minute<=9?draw_minute+'0' : draw_minute}} {{am_or_pm}} &nbsp;&nbsp;{{remaining_minute}}:03&nbsp;{{current_date}}  &nbsp;{{current_hour}}:{{current_minute}}:{{current_second}}
       <span  style="margin-right: 10px;">&nbsp;ID : Parth&nbsp;&nbsp;</span>&nbsp;<span>&nbsp;&nbsp;BALANCE : 0 &nbsp;&nbsp;</span></h4>
       <ion-grid style="height: 55%; width:100%;clear: both; margin-top: -10%">
       <ion-row>
