--- a/src/app/purchased/purchased.page.html
+++ b/src/app/purchased/purchased.page.html
@@ -9,11 +9,11 @@
     <!-- <div style="margin-right: -10px;"> -->
     <ion-grid class="grid" style="margin-left: 10px; margin-right: 10px;">
       <ion-row >
-        <ion-col>
+        <ion-col *ngFor="let item of histories">
           <ion-card  style="background-color: white; border-radius: 10px; width:130px;">
             <!-- <ion-card-header> -->
-              <ion-card-subtitle>02-Jan</ion-card-subtitle>
-              <ion-card-subtitle style="margin-top: -1px;">07:30 PM </ion-card-subtitle>
+              <ion-card-subtitle>{{item.DrawDate}}</ion-card-subtitle>
+              <ion-card-subtitle style="margin-top: -1px;">{{item.DrawTime}} </ion-card-subtitle>
             <!-- </ion-card-header> -->
             <!-- <ion-card-content> -->
               <img src="assets/icon/1.jpeg" style="height: 140px;" />
