--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -1,67 +1,104 @@
-  <div style="background-color: #008000; width: 100%; height: 100%;">
-    <h4 style="color:white;" class="bottomRow2">{{draw_hour}}:{{draw_minute<=9?draw_minute+'0' : draw_minute}} {{am_or_pm}} &nbsp;&nbsp;{{remaining_minute}}:03&nbsp;{{current_date}}  &nbsp;{{current_hour}}:{{current_minute}}:{{current_second}}
-      <span  style="margin-right: 10px;">&nbsp;ID : {{userName}}&nbsp;&nbsp;</span>&nbsp;<span>&nbsp;&nbsp;BALANCE : 0 &nbsp;&nbsp;</span></h4>
-      <ion-grid style="height: 55%; width:100%;clear: both; margin-top: -10%">
-      <ion-row>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/1.jpeg"  width="95%" height="75%" />
-          <ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/2.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/3.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/4.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/5.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-      </ion-row>
-      <ion-row class="bottomRow">
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/6.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/7.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/8.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/9.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-        <ion-col style="text-align: center;" full no-margin no-padding>
-          <img src="assets/icon/10.jpeg"  width="95%" height="75%" />
-<ion-input  style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;" type="number"></ion-input>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <div class="container">  
-      <div><ion-button class="special-bottom-button" shape="round"  color="tertiary" style="color:purple;" (click)="onLogout()">
+<div style="background-color: #008000; width: 100%; height: 100%;">
+  <h4 style="color:white;" class="bottomRow2">{{draw_hour}}:{{draw_minute<=9?draw_minute+'0' : draw_minute}}
+    {{am_or_pm}} &nbsp;&nbsp;{{remaining_minute}}:03&nbsp;{{current_date}}
+    &nbsp;{{current_hour}}:{{current_minute}}:{{current_second}}
+    <span style="margin-right: 10px;">&nbsp;ID : {{userName}}&nbsp;&nbsp;</span>&nbsp;<span>&nbsp;&nbsp;BALANCE : 0
+      &nbsp;&nbsp;</span></h4>
+  <ion-grid style="height: 55%; width:100%;clear: both; margin-top: -10%">
+    <ion-row>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/1.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt1"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/2.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt2"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/3.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt3"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/4.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt4"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/5.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt5"></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row class="bottomRow">
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/6.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt6"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/7.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt7"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/8.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt8"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/9.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt9"></ion-input>
+      </ion-col>
+      <ion-col style="text-align: center;" full no-margin no-padding>
+        <img src="assets/icon/10.jpeg" width="95%" height="75%" />
+        <ion-input
+          style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
+          type="number" [(ngModel)]="txt0"></ion-input>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <div class="container">
+    <div>
+      <ion-button class="special-bottom-button" shape="round" color="tertiary" style="color:purple;"
+        (click)="onLogout()">
         <ion-icon name="exit"></ion-icon>Exit
-      </ion-button></div>  
-      <div><ion-button class="special-bottom-button" shape="round" color="danger" style="color:rgb(1.755, 38, 0);" (click)="onpro()">
+      </ion-button>
+    </div>
+    <div>
+      <ion-button class="special-bottom-button" shape="round" color="danger" style="color:rgb(1.755, 38, 0);"
+        (click)="onpro()">
         <ion-icon name="nuclear"></ion-icon>Clear
-        </ion-button></div>  
-      <div><ion-button class="special-bottom-button" shape="round" color="dark"  style="color:lightskyblue;" (click)="onChange()">
+      </ion-button>
+    </div>
+    <div>
+      <ion-button class="special-bottom-button" shape="round" color="dark" style="color:lightskyblue;"
+        (click)="onJackpot()">
         <ion-icon name="filing"></ion-icon>Jackpot
-        </ion-button></div>  
-      <div><ion-button class="special-bottom-button" shape="round"  color="primary" style="color:yellow;" (click)="onPurchased()">
+      </ion-button>
+    </div>
+    <div>
+      <ion-button class="special-bottom-button" shape="round" color="primary" style="color:yellow;"
+        (click)="onDoubleJackpot()">
         <ion-icon name="filing"></ion-icon>Double Jackpot
-        </ion-button></div>  
-      <div><ion-button class="special-bottom-button" shape="round"  color="warning" style="color:black;" (click)="onLogout()">
-        <ion-icon name="checkbox-outline"></ion-icon>Submit 
-        </ion-button></div>  
+      </ion-button>
+    </div>
+    <div>
+      <ion-button class="special-bottom-button" shape="round" color="warning" style="color:black;" (click)="onSubmit()">
+        <ion-icon name="checkbox-outline"></ion-icon>Submit
+      </ion-button>
     </div>
   </div>
+</div>
