double jackpot added

--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -51,7 +51,7 @@
           type="number" [(ngModel)]="txt7"></ion-input>
       </ion-col>
       <ion-col style="text-align: center;" full no-margin no-padding>
-        <img src="assets/icon/8.jpeg" width="95%" height="75%" />
+        <img src="assets/icon/Tara.jpeg" width="95%" height="75%" />
         <ion-input
           style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
           type="number" [(ngModel)]="txt8"></ion-input>
