--- a/src/app/double-jackpot/double-jackpot.page.html
+++ b/src/app/double-jackpot/double-jackpot.page.html
@@ -1,3 +1,4 @@
+<ion-content>
 <div style="background-color: #008000; width: 100%; height: 100%;">
   <ion-grid>
     <form [formGroup]="doubleJackpotForm">
@@ -5,7 +6,7 @@
       <ion-row *ngIf="i%10===0" align-items-center>
         <ion-col>
           <label class="font-bold m-0" style="color: white;">{{myIndex[i]}}</label>
-          <ion-input maxlength="5" class="yantratext" type="number" formControlName="{{i}}" >
+          <ion-input maxlength="5" class="yantratext" type="number" formControlName="{{i}}">
             </ion-input>
         </ion-col>
         <ion-col>
@@ -57,5 +58,15 @@
       </ion-row>
     </div>
   </form>
+  <ion-row>
+    <ion-col>
+  <ion-button class="special-bottom-button" shape="round" color="warning" style="color:black;" (click)="onSubmit()">
+    <ion-icon name="checkbox-outline"></ion-icon>Submit
+  </ion-button>
+  <ion-button class="special-bottom-button" shape="round" color="warning" style="color:black;" (click)="onExit()">
+    <ion-icon name="checkbox-outline"></ion-icon>Exit
+  </ion-button>
+</ion-col></ion-row>
   </ion-grid>
 </div>
+</ion-content>
